--- a/WeatherApp/WeatherApp/View/UserControls/BottomControl.xaml
+++ b/WeatherApp/WeatherApp/View/UserControls/BottomControl.xaml
@@ -17,11 +17,20 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBox Grid.Column="0" Name="YesterdaysWether" Text="Yesterday" HorizontalContentAlignment ="Center" FontSize="20"/>
-        <InfoTab:InfoTexts Grid.Column="0" Grid.Row="1"/>
-        <TextBox Grid.Column="1" Name="TodaysWether" Text="Today" HorizontalContentAlignment ="Center" FontSize="20"/>
-        <InfoTab:InfoTexts Grid.Column="1" Grid.Row="1"/>
-        <TextBox Grid.Column="2" Name="TommorowsWether" Text="Tomorrow" HorizontalContentAlignment ="Center" FontSize="20"/>
+        <Border BorderBrush="Gray" BorderThickness="0,0,2,0">
+            <TextBlock Grid.Column="0" Text=" Yesterday" TextAlignment="Center" FontSize="20"/>
+        </Border>
+        <Border BorderBrush="Gray" BorderThickness="0,0,2,0" Grid.Column="0" Grid.Row="1">
+            <InfoTab:InfoTexts Grid.Column="0" Grid.Row="1"/>
+        </Border>
+            <InfoTab:InfoTexts Grid.Column="0" Grid.Row="1"/>
+        <Border BorderBrush="Gray" BorderThickness="0,0,2,0" Grid.Column="1" Grid.Row="0">
+            <TextBlock Grid.Column="1" Text=" Today" TextAlignment="Center" FontSize="20"/>
+        </Border>
+        <Border BorderBrush="Gray" BorderThickness="0,0,2,0" Grid.Column="1" Grid.Row="1">
+            <InfoTab:InfoTexts Grid.Column="1" Grid.Row="1"/>
+        </Border>
+        <TextBlock Grid.Column="2" Text=" Tomorrow" TextAlignment="Center" FontSize="20"/>
         <InfoTab:InfoTexts Grid.Column="2" Grid.Row="1"/>
     </Grid>
 </UserControl>
