--- a/WeatherApp/WeatherApp/View/UserControls/MenuBar.xaml
+++ b/WeatherApp/WeatherApp/View/UserControls/MenuBar.xaml
@@ -10,11 +10,30 @@
 
         <!-- Menu bar -->
         <Grid>
-            <Menu>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <!-- Left: Menu -->
+                <ColumnDefinition Width="Auto" />
+                <!-- Right: Search bar -->
+            </Grid.ColumnDefinitions>
+            <Menu Grid.Column="0">
                 <MenuItem Header="Manager">
                     <MenuItem Header="Exit"/>
                 </MenuItem>
             </Menu>
+            <!-- Search ComboBox on the right -->
+            <ComboBox x:Name="StateSelected"
+              Grid.Column="1"
+              Width="200"
+              Height="20"
+              SelectionChanged="StateSelectedChange"
+              VerticalAlignment="Center"
+              HorizontalAlignment="Right"
+              Margin="0,0,10,0">
+                <ComboBoxItem Content="Chicago"/>
+                <ComboBoxItem Content="California" />
+                <ComboBoxItem Content="New York" />
+            </ComboBox>
         </Grid>
     </Grid>
 </UserControl>
