--- a/WeatherApp/WeatherApp/View/UserControls/InfoTexts.xaml
+++ b/WeatherApp/WeatherApp/View/UserControls/InfoTexts.xaml
@@ -14,7 +14,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock Name="tbDate" Text="" Grid.Row="1" FontSize="16" Margin="5,0,0,0"/>
-        <TextBlock Name="tbTemp" Text="Temp:" Grid.Row="2" FontSize="16" Margin="5,0,0,0"/>
-        <TextBlock Name="tbWind" Text="Wind:" Grid.Row="3" FontSize="16" Margin="5,0,0,0"/>
+        <TextBlock Name="tbTemp" Text="Temp: N/A" Grid.Row="2" FontSize="16" Margin="5,0,0,0"/>
+        <TextBlock Name="tbWind" Text="Wind: N/A" Grid.Row="3" FontSize="16" Margin="5,0,0,0"/>
     </Grid>
 </UserControl>
