--- a/WeatherApp/WeatherApp/View/UserControls/InfoTexts.xaml
+++ b/WeatherApp/WeatherApp/View/UserControls/InfoTexts.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="WeatherApp.View.UserControls.InfoTexts"
+             x:Name="Root"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -13,8 +14,9 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Name="tbDate" Text="" Grid.Row="1" FontSize="16" Margin="5,0,0,0"/>
-        <TextBlock Name="tbTemp" Text="Temp: N/A" Grid.Row="2" FontSize="16" Margin="5,0,0,0"/>
-        <TextBlock Name="tbWind" Text="Wind: N/A" Grid.Row="3" FontSize="16" Margin="5,0,0,0"/>
+        <TextBlock Name="tbDate" Text="" Grid.Row="0" FontSize="16" Margin="5,0,0,0"/>
+        <TextBlock Name="tbTemp" Text="Temp: N/A" Grid.Row="1" FontSize="16" Margin="5,0,0,0"/>
+        <TextBlock Name="tbLow" Text="Low: N/A" Grid.Row="2" FontSize="16" Margin="5,0,0,0"/>
+        <TextBlock Name="tbHigh" Text="High: N/A" Grid.Row="3" FontSize="16" Margin="5,0,0,0"/>
     </Grid>
 </UserControl>
