--- a/WeatherApp/WeatherApp/View/UserControls/TodaysWeather.xaml
+++ b/WeatherApp/WeatherApp/View/UserControls/TodaysWeather.xaml
@@ -19,7 +19,7 @@
             </Grid.ColumnDefinitions>
             <TextBlock Name="tbCurrentTemp" Text="45" Grid.Column="1" FontSize="50" VerticalAlignment="Top" HorizontalAlignment="Center"/>
             <Grid Grid.Column="0">
-                <InfoTab:InfoTexts/>
+                <InfoTab:InfoTexts x:Name="infoControl" Latitude="41.8781" Longitude="-87.6298" RequestedDate=""/>
             </Grid>
         </Grid>
         <Grid Grid.Row="1">
